crates/type_checker/src/tests/snapshots/for_for_shadowing3.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 466
expression: "(test[1], res)"
---
- "\nfn foo() -> float {\n    let x: float = 1.0\n    for x: int8 = 1; x < 2; 1 {\n        x\n    }\n    x\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Float
            body:
              Expr:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: x
                          antn: Float
                          init:
                            Expr:
                              Lit:
                                value:
                                  Float: 1.0
                                ty: Float
                    - Stmt:
                        For:
                          start_name: x
                          start_antn: Int8
                          start_expr:
                            Expr:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          cond_expr:
                            Expr:
                              BinOp:
                                op: Lt
                                lhs:
                                  Expr:
                                    Ident:
                                      name: x
                                      ty: Int8
                                rhs:
                                  Expr:
                                    Lit:
                                      value:
                                        Int8: 2
                                      ty: Int8
                                ty: Bool
                          step_expr:
                            Expr:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          body:
                            Expr:
                              Block:
                                list:
                                  - Expr:
                                      Ident:
                                        name: x
                                        ty: Int8
                                ty: Int8
                    - Expr:
                        Ident:
                          name: x
                          ty: Float
                  ty: Float

