crates/type_checker/src/tests/snapshots/for_lit_step_mismatch.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 467
expression: "(test[1], res)"
---
- "\nfn foo() {\n    for x: int = 1; x < 3; 1.0 {\n        x\n    }\n}\n"
- Err: Literal is a float in an integer context

