crates/type_checker/src/tests/snapshots/struct_attr_only.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 744
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float = 1.0\n}\n"
- Ok:
    nodes:
      - Stmt:
          Struct:
            name: Foo
            attributes:
              - Stmt:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - Stmt:
                  Let:
                    name: b
                    antn: Float
                    init:
                      Expr:
                        Lit:
                          value:
                            Float: 1.0
                          ty: Float
            methods: []

