crates/type_checker/src/tests/snapshots/struct_mix.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 801
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float = 1.0\n\n    fn c() -> int {\n        a\n    }\n    fn d() {}\n}\n"
- Ok:
    nodes:
      - node:
          Struct:
            name: Foo
            fields:
              - node:
                  Let:
                    name: a
                    antn: Int32
                    init:
                      node:
                        Lit:
                          value:
                            Int32: 0
                      ty: Int32
                ty: ~
              - node:
                  Let:
                    name: b
                    antn: Float
                    init:
                      node:
                        Lit:
                          value:
                            Float: 1.0
                      ty: Float
                ty: ~
            methods:
              - node:
                  Fn:
                    proto:
                      name: c
                      args: []
                      ret_ty: Int32
                      is_extern: false
                    body:
                      node:
                        Block:
                          list:
                            - node:
                                Ident:
                                  name: a
                              ty: Int32
                      ty: Int32
                ty: ~
              - node:
                  Fn:
                    proto:
                      name: d
                      args: []
                      ret_ty: Void
                      is_extern: false
                    body:
                      node:
                        Block:
                          list: []
                      ty: Void
                ty: ~
        ty: ~

